<resources>
    <string name="app_name">Vožyk</string>
    <string name="title_home">Mood</string>
    <string name="title_activity_registration">Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="accent_colour">Accent Colour</string>
    <string name="launcher_title">Simple Notes</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="background_colour">Background Colour</string>
    <string name="colour_indicator">Colour indicator</string>
    <string name="colour_navigation_bar">Colour Navigation Bar</string>
    <string name="confirm_delete">Confirm Deletion</string>
    <string name="confirm_delete_text">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="empty_list_text">Press the button on the bottom right to add a new note!</string>
    <string name="exception">Exception: </string>
    <string name="font_colour">Font Colour</string>
    <string name="new_note">New Note</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share_to">Share to:</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="get_note">Get Note</string>
    <string name="set_note">Set Note</string>
    <string name="note_change">Note Changed</string>
    <string name="note_title">Note Title</string>
    <string name="note_title_description">The title of the note</string>
    <string name="note_content">Note Content</string>
    <string name="note_content_description">The contents of the note</string>
    <string name="append">Append</string>
    <string name="append_text">Append text instead of overwriting</string>
    <string name="note_not_found">Note is not found</string>
    <string name="email">Email</string>
    <string name="log_in_to_vo_yk">Log in to Vožyk</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">create new account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="email_is_required">Email is Required!</string>
    <string name="email_is_not_real">Email is not real!</string>
    <string name="password_is_required">Password is Required</string>
    <string name="password_accepted">Password accepted</string>
    <string name="reset_link">Enter Your Email To Received Reset Link.</string>
    <string name="reset_password">Reset Password?</string>
    <string name="error">Error!</string>
    <string name="logged_in_successfully">Logged in Successfully</string>
    <string name="password_contain_characters">Password Must be >= 6 Characters</string>
    <string name="link_sent">Reset Link Sent To Your Email.</string>
    <string name="error_link">Error ! Reset Link is Not Sent</string>
    <string name="password_contain">Password contains 8 characters,upper and lower letters,number and special character</string>
    <string name="confirm_password_required">Confirm Password is Required.</string>
    <string name="same_pass_conf">Password and Confirm Password must be the same</string>
    <string name="verification_email_sent">Verification Email Has been Sent</string>
    <string name="how_was_your_mood_today">How was your mood today?</string>
    <string name="month_year">Month year</string>
    <string name="average_mood">Average mood</string>
    <string name="mood_chart">Mood Chart</string>
    <string name="weekly_mood_average">Weekly Mood Average</string>
    <string name="not_enough_data_to_draw_this_chart_come_back_later">Not enough data to draw this chart.\nCome back later!!</string>
    <string name="_0">0</string>
    <string name="how_was_your_mood">How was your mood?</string>
    <string name="starting_date">Starting Date</string>
    <string name="estimated_finishing_date">Estimated Finishing Date</string>
    <string name="name">Name</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_lab_test">Add Lab Test</string>
    <string name="update_times">Update Times</string>
    <string name="update_medicine">Update Medicine</string>
    <string name="profile">Profile</string>
    <string name="touch_profile_picture_to_change">Touch profile picture to change</string>
    <string name="press_to_edit_delete">Press to edit/delete</string>
    <string name="lab_test_name">Lab Test Name</string>
    <string name="time_12_12_2022">Time : 12/12/2022</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="info">Info</string>
    <string name="task">Task:</string>
    <string name="finishing_date">Finishing Date:</string>
    <string name="notes">Notes</string>
    <string name="to_do">To-Do</string>
    <string name="tests">Tests</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="no_medicines">No Medicines</string>
    <string name="your_medicines">Your Medicines</string>
    <string name="reason">Reason</string>
    <string name="add_a_new_task">Add a New Task</string>
    <string name="task_name">Task Name</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="time_1500">Time : 1500</string>
    <string name="before_food">Before food</string>
    <string name="dose">Dose</string>
    <string name="after_food">After Food</string>
    <string name="morning">Morning</string>
    <string name="afternoon">afternoon</string>
    <string name="night">Night</string>
    <string name="custom">Custom</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="to_do_list">To-Do List</string>
    <string name="my_completed_tasks">My Completed Tasks</string>
    <string name="my_pending_tasks">My Pending Tasks</string>
    <string name="dismiss">DISMISS</string>
    <string name="self_assessment_quiz">Self-Assessment Quiz</string>
    <string name="anxiety">Anxiety</string>
    <string name="depression">Depression</string>
    <string name="ptsd">Ptsd</string>
    <string name="ocd">Ocd</string>
    <string name="bipolar">Bipolar</string>
    <string name="adhd">Adhd</string>
    <string name="pills">Pills</string>
    <string name="visits">Visits</string>
    <string name="labs">Labs</string>
    <string name="_5_30_minutes">5–30 minutes</string>
    <string name="set">Set</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="breathe_and_let_go">Breathe and let go</string>
    <string name="note_optional">Note (optional)</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="i_want_to_inhale_for">I want to inhale for:</string>
    <string name="seconds">seconds</string>
    <string name="i_want_to_hold_for">I want to hold for:</string>
    <string name="i_want_to_exhale_for">I want to exhale for:</string>
    <string name="for_for">For:</string>
    <string name="cycles">cycles</string>
    <string name="medicine">medicine</string>
    <string name="lab_doc">Lab</string>
    <string name="mood">Mood</string>
    <string name="relax">Relax</string>
    <string name="other">Other</string>
    <string name="english">English</string>
    <string name="belorussian">Belorussian</string>
    <string name="polish">Polish</string>
    <string name="change_language">Change Language:</string>
    <string name="delete_list">Delete List</string>
    <string name="Sunday">S</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Breathe">Breathe</string>
    <string name="Other">Other</string>
    <string name="Meditate">Meditate</string>
    <string name="choose_language">Choose language</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="delete_account">Delete account</string>
    <string name="retry">Retry</string>
    <string name="result">Result</string>
    <string name="in_the_past_have_you">In the past have you</string>
    <string name="tried_hard_not_to_think_about_the_events_or_went_out_of_your_way_to_avoid_situations_that_reminded_you_of_the_events">Tried hard not to think about the events or went out of your way to avoid situations that reminded you of the events</string>
    <string name="have_you_ever_experienced_this_kind_of_event">Have you ever experienced this kind of event?</string>
    <string name="sometimes_things_happen_to_people_that_are_unusually_or_especially_frightening_horrible_or_traumatic_for_example">Sometimes things happen to people that are unusually or especially frightening horrible or traumatic for example:</string>
    <string name="a_serious_accident_or_fires">A serious accident or fires</string>
    <string name="a_physical_or_sexual_assault">A physical or sexual assault</string>
    <string name="an_earthquake_or_flood">An earthquake or flood</string>
    <string name="a_war">A war</string>
    <string name="seeing_someone_be_killed_or_seriously_injured">Seeing someone be killed or seriously injured</string>
    <string name="having_a_loved_one_die_through_homicide_and_suicide">Having a loved one die through homicide and suicide</string>
    <string name="attention_deficit_hyperactivity_disorder">Attention deficit hyperactivity disorder</string>
    <string name="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems">Over the last 2 weeks how often have you been bothered by the following problems:</string>
    <string name="feeling_nervous_anxious_or_on_edge">Feeling nervous anxious or on edge</string>
    <string name="not_at_all_sure">Not at all sure</string>
    <string name="several_days">Several days</string>
    <string name="over_half_the_days">Over half the days</string>
    <string name="nearly_every_day">Nearly every day</string>
    <string name="bipolar_disorder">Bipolar disorder</string>
    <string name="obsessive_compulsive_disorder">Obsessive compulsive disorder</string>
    <string name="adhd1">1. How often do you have trouble wrapping up the final details of a project, once the challenging parts have been done?</string>
</resources>