<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Hex"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/add_a_new_task"
        android:textColor="#234E70"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/task_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#234E70" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/starting_date"
        android:textColor="#234E70"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:hint="@string/estimated_finishing_date"
        android:textColor="#234E70"
        android:textSize="18sp" />


</LinearLayout>