<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Hex">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meds_edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:hint="@string/medicine_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meds_edit_dose"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:hint="@string/dose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meds_edit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/up_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="216dp"
        android:checkedButton="@+id/up_radio_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meds_edit_dose">

        <RadioButton
            android:id="@+id/up_radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/before_food"
            android:textColor="#234E70" />

        <RadioButton
            android:id="@+id/up_radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/after_food"
            android:textColor="#234E70" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/up_toggleButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_radioGroup">

        <Button
            android:id="@+id/up_morning"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/morning"
            android:textColor="#234E70" />

        <Button
            android:id="@+id/up_lunch"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/afternoon"
            android:textColor="#234E70" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/up_toggleButton1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_radioGroup">

        <Button
            android:id="@+id/up_night"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/night"
            android:textColor="#234E70" />


        <Button
            android:id="@+id/up_custom_time"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/custom"
            android:textColor="#234E70" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/up_update_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/update"
        android:textColor="#234E70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_toggleButton" />

    <Button
        android:id="@+id/up_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/Raspberry"
        android:text="@string/cancel"
        android:textColor="#234E70"
        app:layout_constraintBottom_toBottomOf="@+id/up_update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/up_update_btn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingTop="60dp"
        android:paddingBottom="10dp"
        android:text="@string/update_medicine"
        android:textColor="#234E70"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>