<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Hex">

    <LinearLayout
        android:id="@+id/activity_gad7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Hex"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".ui.ptsd.ptsd">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sometimes_things_happen_to_people_that_are_unusually_or_especially_frightening_horrible_or_traumatic_for_example"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/exampleOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/a_serious_accident_or_fires"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exampleTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/a_physical_or_sexual_assault"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exampleThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/an_earthquake_or_flood"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exampleFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/a_war"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exampleFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/seeing_someone_be_killed_or_seriously_injured"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exampleSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/having_a_loved_one_die_through_homicide_and_suicide"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/have_you_ever_experienced_this_kind_of_event"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#3F51B5"
            android:textColorHint="#3F51B5"
            android:textColorLink="#3F51B5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#C0B2E7"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp" />

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#C0B2E7"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#234E70"
            android:textColorHighlight="#664564"
            android:textColorHint="#664564"
            android:textColorLink="#664564"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>